--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
-.App {
-  text-align: center;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+header ul li{
+  @apply px-8
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.bg-primary{
+  background-color: #ccc;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.bg-secondary{
+  background-color: #2b2d77;
 }
+.mobile-nav{
+  @apply fixed top-10 bg-gray-800 w-full h-1/4 left-0;
 
-.App-link {
-  color: #61dafb;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.mobile-nav li{
+  @apply w-full text-center border-b-2 h-full;
+  
+}
+header ul li:hover{
+  text-decoration: underline;
+}
+.bg-about{
+  background-color: #0E3386;
+}
+.underlinee{
+  text-decoration: underline;
+}
+html{
+  scroll-behavior: smooth;
 }
