--- a/src/App.css
+++ b/src/App.css
@@ -6,10 +6,10 @@ header ul li{
   @apply px-8
 }
 .bg-primary{
-  background-color:   rgb(201,238,230);
+  background-color: #ccc;
 }
 .bg-secondary{
-  background-color: rgb(255,192,197);
+  background-color: #2b2d77;
 }
 .mobile-nav{
   @apply fixed top-10 bg-gray-800 w-full h-1/4 left-0;
